Updated time and place for this Friday's bible study

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -29,9 +29,9 @@
           %h3 Last "The Friday Gathering"!
           %p Wrapping up the year with our last TFG and Friday night Bible Study. Don't miss it!
           %h6
-            = link_to "Harbor Bay Parkway", "https://www.google.com/maps/place/Gracepoint+Berkeley+Church/@37.7259911,-122.23579,17z/data=!3m1!4b1!4m5!3m4!1s0x808f846a9fc9b947:0xb503fe545d3946b6!8m2!3d37.7279048!4d-122.2338217"
-            @ 6:00 PM, Friday, 3/30/2018
-          %p Rides at Barrows Hall at 5:00 PM
+            Grad Haven (1612 Walnut St Apt 1, Berkeley, CA 94709)
+            @ 6:30 PM, Friday, 5/4/2018
+          %p Please contact Virginia (virginia.chae at gpmail.org) for rides
       .carousel-item
         =image_tag "SWS-generic.jpg", class: 'd-block img-fluid', alt: 'Responsive image'
         .carousel-caption.d-none.d-md-block
