--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,11 +9,15 @@
     %title International Undergraduate Student Ministry
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = favicon_link_tag
+
+    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     %link{rel: :stylesheet, type: 'text/css', href: 'https://fonts.googleapis.com/css?family=Montserrat:400,700'}
     %link{rel: :stylesheet, type: 'text/css', href: 'https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic'}
   %body#page-top
+    = render partial: 'layouts/header'
     = yield
+    = render partial: 'layouts/footer'
 
-  = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = javascript_include_tag "startbootstrap-freelancer/js/freelancer.min"
