--- a/app/views/boards/index.html.haml
+++ b/app/views/boards/index.html.haml
@@ -1,8 +1,15 @@
 %h1 Team and Individual Scores
-- @teams_w_boards.each do |team|
-  %ul.list-group
-    %h2= team.name
-    -team.users.each do |user|
-      %li.list-group-item
-        =link_to user.email, boards_path(user.board)
-        %span.badge.badge-primary.badge-pill= user.board.score
+.row
+  - @teams_w_boards.each do |team|
+    .col-md-4
+      %ul.list-group
+        %h3
+          = team.name
+          %span.badge.badge-primary.badge-pill= team.score
+        - team.users.each do |user|
+          %li.list-group-item
+            - if user.board
+              = link_to user.email, board_path(user.board)
+              %span.badge.badge-primary.badge-pill= user.score
+            - else
+              = user.email
