--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -1,7 +1,15 @@
-%h1= "#{@owner} Bingo Board"
-= @board.id
-%p Your total score is
-%h2 0
+%h1
+  Bingo Board for
+  = @board.user.email
+.row
+  .col-md-6
+    %h3
+      Board score:
+      = @board.score
+  .col-md-6
+    %h3
+      Your team score:
+      = @board.user.team.score
 %table.table.table-bordered
   - Board::LAYOUT.each_with_index do |row, index_row|
     %tr
