Updated application css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,8 +19,11 @@
  */
 
 header.masthead {
-  padding-top: 100px;
-  padding-bottom: 0px;
+  padding-top: 150px;
+}
+
+section h2 {
+  margin-bottom: 40px;
 }
 
 .carousel-caption {
