--- a/app/views/boards/index.html.haml
+++ b/app/views/boards/index.html.haml
@@ -1,4 +1,4 @@
-%h1 Team and Individual Scores
+%h2 Team and Individual Scores
 .row
   - @teams_w_boards.each do |team|
     .col-md-4
@@ -9,7 +9,7 @@
         - team.users.each do |user|
           %li.list-group-item
             - if user.board
-              = link_to user.email, board_path(user.board)
-              %span.badge.badge-primary.badge-pill= user.score
+              = link_to user.username, board_path(user.board)
             - else
-              = user.email
+              = link_to user.username, new_board_path
+            %span.badge.badge-primary.badge-pill= user.score
