--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -5,11 +5,11 @@
   .field
     = f.label :username
     %br/
-    = f.text_field :username, autofocus: true, autocomplete: "username"
+    = f.text_field :username, autofocus: true, autocomplete: "username", class: 'form-control'
   .field
     = f.label :email
     %br/
-    = f.text_field :email, autocomplete: "email"
+    = f.email_field :email, autocomplete: "email", class: 'form-control'
   - if devise_mapping.confirmable? && resource.pending_reconfirmation?
     %div
       Currently waiting confirmation for: #{resource.unconfirmed_email}
@@ -17,7 +17,7 @@
     = f.label :password
     %i (leave blank if you don't want to change it)
     %br/
-    = f.password_field :password, autocomplete: "off"
+    = f.password_field :password, autocomplete: "off", class: 'form-control'
     - if @minimum_password_length
       %br/
       %em
@@ -26,15 +26,15 @@
   .field
     = f.label :password_confirmation
     %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
+    = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
   .field
     = f.label :current_password
     %i (we need your current password to confirm your changes)
     %br/
-    = f.password_field :current_password, autocomplete: "off"
+    = f.password_field :current_password, autocomplete: "off", class: 'form-control'
   .actions
-    = f.submit "Update"
+    = f.submit "Update", class: 'btn btn-primary'
 %h3 Cancel my account
 %p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:'btn btn-danger'}
+= link_to "Back", :back, class: 'btn btn-primary'
