--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -4,22 +4,26 @@
   .field
     = f.label :username
     %br/
-    = f.text_field :username, autofocus: true, autocomplete: "username"
+    = f.text_field :username, autofocus: true, autocomplete: "username", class: 'form-control'
   .field
     = f.label :email
     %br/
-    = f.text_field :email, autocomplete: "email"
+    = f.email_field :email, autocomplete: "email", class: 'form-control'
+  .field
+    = f.label :team
+    %br/
+    = f.select :team_id, options_for_select(Team.pluck(:name, :id)), class: 'form-control'
   .field
     = f.label :password
     - if @minimum_password_length
       %em
         (#{@minimum_password_length} characters minimum)
     %br/
-    = f.password_field :password, autocomplete: "off"
+    = f.password_field :password, autocomplete: "off", class: 'form-control'
   .field
     = f.label :password_confirmation
     %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
+    = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
   .actions
-    = f.submit "Sign up"
+    = f.submit "Sign up", class: 'btn btn-primary'
 = render "devise/shared/links"
