--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,7 @@
     - if controller_name == 'pages'
       = yield
     - else
-      %section
+      %header.masthead
         .container
           = yield
     = render partial: 'layouts/footer'
