--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,7 +19,7 @@
  */
 
 header.masthead {
-  padding-top: 150px;
+  padding-top: 120px;
 }
 
 section h2 {
@@ -36,4 +36,8 @@ section h2 {
 .carousel-indicators li {
   width: 3em;
   height: 0.5em;
+}
+
+.field {
+  margin: 10px 0;
 }
