--- a/app/views/boards/index.html.haml
+++ b/app/views/boards/index.html.haml
@@ -7,7 +7,7 @@
           = team.name
           %span.badge.badge-primary.badge-pill= team.score
         - team.users.each do |user|
-          %li.list-group-item
+          %li.list-group-item.d-flex.justify-content-between.align-items-center
             - if user.board
               = link_to user.username, board_path(user.board)
             - else
