--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -1,5 +1,8 @@
 %h1
-  = "#{@board.user.username}'s Board"
+  - if @board.user == current_user
+    Your board
+  - else
+    = "#{@board.user.username}'s board"
 .row
   .col-md-6
     %h3
