--- a/app/views/cells/new.html.haml
+++ b/app/views/cells/new.html.haml
@@ -7,8 +7,11 @@
       = f.hidden_field :board_id, value: params[:board_id]
       = f.hidden_field :row, value: params[:row]
       = f.hidden_field :col, value: params[:col]
-      = f.label 'Please share your learning from this activity:'
-      = f.text_area :response, class: 'form-control'
-      = f.label 'Want to upload a picture?'
-      = f.file_field :picture
-      = f.submit 'Submit', class: 'form-control'
+      .field
+        = f.label 'Please share your learning from this activity:'
+        = f.text_area :response, class: 'form-control'
+      .field
+        = f.label 'Want to upload a picture?'
+        = f.file_field :picture
+      .field
+        = f.submit 'Submit', class: 'btn btn-success'
