--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -6,9 +6,9 @@
 .row
   .col-md-6
     %h3
-      Board score:
+      Score:
       = @board.score
-  .col-md-6
+  .col-md-6.text-right
     %h3
       Your team score:
       = @board.user.team.score
@@ -16,17 +16,18 @@
   - Board::LAYOUT.each_with_index do |row, index_row|
     %tr
       - row.each_with_index do |cell, index_col|
-        %td.text-center{style:'border-width: 5px'}
+        - finished = @cells.where(col: index_col, row: index_row).first ? 'finished' : ''
+        %td.text-center{ style:'border-width: 5px', class: finished }
           %div{ data: { toggle: 'tooltip', placement: 'bottom' },
-                title: cell[:description], class: cell[:level] }
+                title: cell[:description], class: cell[:level]}
             = cell[:name]
-            #answer
-            - if checked_cell = @cells.where(col: index_col, row: index_row).first
-              = checked_cell.response
-          %div
-            = link_to new_board_cell_path(board_id: @board.id, row: index_row, col: index_col), class: 'btn btn-info btn-sm' do
-              %i.fa.fa-check-circle
-              Check!
+          %div{style: 'margin: 20px 0'}
+            - if finished == 'finished'
+              = link_to 'View answer', board_cell_path(@board, cell)
+            - else
+              = link_to new_board_cell_path(board_id: @board.id, row: index_row, col: index_col), class: 'btn btn-info btn-sm' do
+                %i.fa.fa-check-circle
+                Finish!
 
 :javascript
   $('[data-toggle="tooltip"]').tooltip()
