--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,12 +11,13 @@
  * It is generally better to create a new file per style scope.
  *
  *= require bootstrap/dist/css/bootstrap.min.css
- *= require font-awesome/scss/font-awesome.scss
  *= require magnific-popup/dist/magnific-popup.css
  *= require startbootstrap-freelancer/scss/freelancer.scss
  *= require_tree .
  *= require_self
  */
+
+@import "font-awesome";
 
 header.masthead {
   padding-top: 120px;
