--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -10,6 +10,11 @@
     = f.label :email
     %br/
     = f.email_field :email, autocomplete: "email", class: 'form-control'
+  .field
+    = f.label :team
+    %br/
+    = f.select :team_id, options_for_select(Team.pluck(:name, :id)),
+      { include_blank: 'Select a team...' }, class: 'form-control'
   - if devise_mapping.confirmable? && resource.pending_reconfirmation?
     %div
       Currently waiting confirmation for: #{resource.unconfirmed_email}
