Fixed the cell layout

--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -16,17 +16,18 @@
   - Board::LAYOUT.each_with_index do |row, index_row|
     %tr
       - row.each_with_index do |cell, index_col|
-        - finished = @cells.where(col: index_col, row: index_row).first ? 'finished' : ''
+        - the_cell = @cells.where(col: index_col, row: index_row).first
+        - finished = the_cell ? 'finished' : ''
         %td.text-center{ style:'border-width: 5px', class: finished }
           %div{ data: { toggle: 'tooltip', placement: 'bottom' },
                 title: cell[:description], class: cell[:level]}
             = cell[:name]
           %div{style: 'margin: 20px 0'}
             - if finished == 'finished'
-              = link_to 'View answer', board_cell_path(@board, cell)
+              = link_to 'View answer', board_cell_path(@board, the_cell)
             - else
               = link_to new_board_cell_path(board_id: @board.id, row: index_row, col: index_col), class: 'btn btn-info btn-sm' do
-                %i.fa.fa-check-circle
+                =fa_icon 'check-circle'
                 Finish!
 
 :javascript
