Block non user to edit

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,6 +22,8 @@
     - else
       %header.masthead
         .container
+          %p.text-danger= flash[:error]
+          %p.text-warning= flash[:notice]
           = yield
     = render partial: 'layouts/footer'
 
