--- a/app/views/cells/new.html.haml
+++ b/app/views/cells/new.html.haml
@@ -16,3 +16,4 @@
         = f.file_field :picture
       .field
         = f.submit 'Submit', class: 'btn btn-success'
+    = link_to 'Cancel', board_path(Board.find(params[:board_id])), class: 'btn btn-danger'
