--- a/app/views/boards/index.html.haml
+++ b/app/views/boards/index.html.haml
@@ -1,9 +1,9 @@
 %h2 Team and Individual Scores
 .row
   - @teams.each do |team|
-    .col-md-4
+    .col-md-3
       %ul.list-group
-        %h3
+        %h5.d-flex.justify-content-between.align-items-center
           = team.name
           %span.badge.badge-primary.badge-pill= team.score
         - team.users.includes(:board).each do |user|
