--- a/app/views/cells/new.html.haml
+++ b/app/views/cells/new.html.haml
@@ -4,7 +4,7 @@
     %h3= @selected_cell[:description]
 .row
   .col-md-12
-    = form_for @cell, url: { action: 'create' } do |f|
+    = form_for @cell, url: { action: 'create' }, html: { multipart: true } do |f|
       = f.hidden_field :board_id, value: params[:board_id]
       = f.hidden_field :row, value: params[:row]
       = f.hidden_field :col, value: params[:col]
