--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -5,16 +5,11 @@
   .field
     = f.label :username
     %br/
-    = f.text_field :username, autofocus: true, autocomplete: "username", class: 'form-control'
+    = f.text_field :username, autofocus: true, autocomplete: "username", class: 'form-control', disabled: true
   .field
     = f.label :email
     %br/
-    = f.email_field :email, autocomplete: "email", class: 'form-control'
-  .field
-    = f.label :team
-    %br/
-    = f.select :team_id, options_for_select(Team.pluck(:name, :id)),
-      { include_blank: 'Select a team...' }, class: 'form-control'
+    = f.email_field :email, autocomplete: "email", class: 'form-control', disabled: true
   - if devise_mapping.confirmable? && resource.pending_reconfirmation?
     %div
       Currently waiting confirmation for: #{resource.unconfirmed_email}
@@ -39,7 +34,4 @@
     = f.password_field :current_password, autocomplete: "off", class: 'form-control'
   .actions
     = f.submit "Update", class: 'btn btn-primary'
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:'btn btn-danger'}
-= link_to "Back", :back, class: 'btn btn-primary'
+    = link_to "Scoreboard", boards_path
