--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -4,7 +4,7 @@
     =link_to '/', class: 'navbar-brand js-scroll-trigger' do
       = image_tag 'favicon.ico', width: '30px'
       IUSM
-    %button.navbar-toggler.navbar-toggler-right{"aria-controls" => "navbarResponsive", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarResponsive", "data-toggle" => "collapse", type: "button"}
+    %button.navbar-toggler.navbar-toggler-right{'aria-controls' => 'navbarResponsive', 'aria-expanded' => 'false', 'aria-label' => 'Toggle navigation', 'data-target' => '#navbarResponsive', 'data-toggle' => 'collapse', type: 'button'}
       Menu
       %i.fa.fa-bars
     #navbarResponsive.collapse.navbar-collapse
@@ -17,12 +17,14 @@
           = link_to 'Connect', '#connect', class: 'nav-link rounded js-scroll-trigger'
         %li.nav-item
           .dropdown
-            = link_to 'Members', '#', class: 'btn btn-secondary dropdown-toggle',
-              id: "dropdownMenuLink", data: { toggle: 'dropdown' },
+            = link_to 'Member', '#', class: 'btn btn-secondary dropdown-toggle',
+              id: 'dropdownMenuLink', data: { toggle: 'dropdown' },
               'aria-haspopup' => 'true', 'aria-expanded' => 'false'
-            .dropdown-menu{"aria-labelledby" => "dropdownMenuButton"}
+            .dropdown-menu{'aria-labelledby' => 'dropdownMenuButton'}
               - if user_signed_in?
-                .dropdown-item=link_to "Summer Challenge", boards_path
-                .dropdown-item=link_to "Sign out", destroy_user_session_path
+                .dropdown-item=link_to 'Summer Challenge', boards_path
+                .dropdown-item=link_to 'Edit profile', edit_user_path(current_user)
+                .dropdown-item=link_to 'Edit password', edit_user_registration_path
+                .dropdown-item=link_to 'Sign out', destroy_user_session_path
               - else
-                .dropdown-item=link_to "Sign in", new_user_session_path
+                .dropdown-item=link_to 'Sign in', new_user_session_path
