Updated application layout

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,8 +22,12 @@
     - else
       %header.masthead
         .container
-          %p.text-danger= flash[:error]
-          %p.text-warning= flash[:notice]
+          - if flash[:error] || flash[:notice] || flash[:success]
+            .card
+              .card-body.bg-light
+                %p.text-danger= flash[:error]
+                %p.text-warning= flash[:notice]
+                %p.text-success= flash[:success]
           = yield
     = render partial: 'layouts/footer'
 
