--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,7 +1,5 @@
 %h2 Profile
-.info
-  %strong Username:
-  #{@user.username}
+%h3 Username: #{@user.username}
 %h3 Email: #{@user.email}
 %h3 Team: #{@user.team.name}
 .actions
