Improved board design

--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -17,3 +17,17 @@
 .xhard {
   color: red;
 }
+
+.instruction {
+  margin: 15px;
+  height: 75px;
+}
+
+.response {
+  margin: 20px 0;
+}
+
+.table-bordered td.bingo-cell {
+  border-width: 10px;
+  width: 20%;
+}
