--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -1,3 +1,6 @@
+.pull-right
+  = button_tag 'Bingo Board Instructions', class: 'btn btn-primary',
+    data: { toggle: 'modal', target: '#boardInstrModal' }
 %h1
   - if @board.user == current_user
     Your board
@@ -18,19 +21,39 @@
       - row.each_with_index do |cell, index_col|
         - the_cell = @cells.where(col: index_col, row: index_row).first
         - finished = the_cell ? 'finished' : ''
-        %td.text-center{ style:'border-width: 5px', class: finished }
-          %div{class: cell[:level]}
+        %td.bingo-cell.text-center{ class: finished }
+          %div.instruction{ class: cell[:level] }
             = cell[:name]
             - if cell[:description] != ''
-              = fa_icon('question-circle', data: { toggle: 'popover', placement: 'bottom', html: 'true',
+              = fa_icon('info-circle', data: { toggle: 'popover', placement: 'bottom', html: 'true',
                 content: cell[:description]})
-          %div{style: 'margin: 20px 0'}
+          %div.response
             - if finished == 'finished'
               = link_to 'View answer', board_cell_path(@board, the_cell)
             - else
               = link_to new_board_cell_path(board_id: @board.id, row: index_row, col: index_col), class: 'btn btn-info btn-sm' do
                 =fa_icon 'check-circle'
                 Finish!
+
+<!-- Modal -->
+#boardInstrModal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "exampleModalLabel", role: "dialog", tabindex: "-1"}
+  .modal-dialog{role: "document"}
+    .modal-content
+      .modal-header
+        %h5#exampleModalLabel.modal-title Summer Challenge Bingo Board Instructions
+        %button.close{"aria-label" => "Close", "data-dismiss" => "modal", type: "button"}
+          %span{"aria-hidden" => "true"} ×
+      .modal-body
+        .easy
+          Green is the easy difficulty level = 100 points.
+        .medium
+          Orange is the medium difficulty level = 200 points.
+        .hard
+          Dark red is the hard difficulty level = 500 points.
+        .xhard
+          Red (the one in the center) is the extra hard difficulty level = 1000 points.
+      .modal-footer
+        %button.btn.btn-secondary{"data-dismiss" => "modal", type: "button"} Close
 
 :javascript
   $('[data-toggle="popover"]').popover();
