Updated board css

--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -19,15 +19,14 @@
 }
 
 .instruction {
-  margin: 15px;
-  height: 75px;
+  height: 70px;
 }
 
 .response {
-  margin: 20px 0;
+  margin: 10px 0 5px 0;
 }
 
 .table-bordered td.bingo-cell {
-  border-width: 10px;
+  border-width: 5px;
   width: 20%;
 }
