--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -1,18 +1,19 @@
-.pull-right
-  = button_tag 'Bingo Board Instructions', class: 'btn btn-primary',
-    data: { toggle: 'modal', target: '#boardInstrModal' }
-%h1
-  #{@user_possessive} board
 .row
   .col-md-9
     .row
+      .col-md-9
+        %h2 #{@user_possessive} board
+      .col-md-3.text-right
+        %h2= button_tag 'Bingo! Instructions', class: 'btn btn-warning',
+          data: { toggle: 'modal', target: '#boardInstrModal' }
+    .row
       .col-md-6
-        %h3
+        %h4
           Score:
           = @board.score
       .col-md-6.text-right
-        %h3
-          #{@user_possessive} team score:
+        %h4
+          #{@board.user.team.name}:
           = @board.user.team.score
     %table.table.table-bordered
       - Board::LAYOUT.each_with_index do |row, index_row|
@@ -34,6 +35,15 @@
                     =fa_icon 'check-circle'
                     Finish!
   .col-md-3
+    .card
+      .card-body
+        %h5.card-title Weekly Bonus
+        %p.card-text Some quick example text to build on the card title and make up the bulk of the card's content.
+        = button_tag class: 'btn btn-primary card-link' do
+          = fa_icon('check-circle')
+          Finish
+
+    %br
     %ul.list-group.list-group-flush#recent-activities
       %li.list-group-item.text-info
         %strong Recent sharings...
@@ -49,21 +59,19 @@
 
 <!-- Modal -->
 #boardInstrModal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "exampleModalLabel", role: "dialog", tabindex: "-1"}
-  .modal-dialog{role: "document"}
+  .modal-dialog.modal-lg{role: "document"}
     .modal-content
       .modal-header
-        %h5#exampleModalLabel.modal-title Summer Challenge Bingo Board Instructions
+        %h5#exampleModalLabel.modal-title Bingo! Instructions
         %button.close{"aria-label" => "Close", "data-dismiss" => "modal", type: "button"}
           %span{"aria-hidden" => "true"} ×
       .modal-body
-        .easy
-          Green is the easy difficulty level = 100 points.
-        .medium
-          Orange is the medium difficulty level = 200 points.
-        .hard
-          Dark red is the hard difficulty level = 500 points.
-        .xhard
-          Red (the one in the center) is the extra hard difficulty level = 1000 points.
+        %h4 Point System
+        .easy Green is the easy difficulty level = 100 points.
+        .medium Orange is the medium difficulty level = 200 points.
+        .hard Dark red is the hard difficulty level = 500 points.
+        .xhard Red (center) is the extra hard difficulty level = 1,000 points.
+        %strong BINGO! (five in a row) = 5,000 points
       .modal-footer
         %button.btn.btn-secondary{"data-dismiss" => "modal", type: "button"} Close
 
