Changed the header text in board#show view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,8 +23,12 @@ header.masthead {
   padding-top: 120px;
 }
 
-header.masthead h1, h2 {
+header.masthead h1 {
   margin: 40px 0px;
+}
+
+header.masthead h2 {
+  margin: 20px 0px;
 }
 
 .carousel-caption {
