--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,16 +19,20 @@
 
 @import "font-awesome";
 
+header.masthead#announcements {
+  padding-top: 100px;
+}
+
 header.masthead {
   padding-top: 120px;
 }
 
-header.masthead h1 {
-  margin: 40px 0px;
+section#about {
+  padding-top: 0px;
 }
 
-header.masthead h2 {
-  margin: 20px 0px;
+section h2 {
+  margin: 0px 0px 40px 0;
 }
 
 .carousel-caption {
