--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,7 +1,13 @@
 %h2 Profile
-%h3 Username: #{@user.username}
-%h3 Email: #{@user.email}
-%h3 Team: #{@user.team.name}
+%br
+%h4 Username: #{@user.username}
+%br
+%h4 Email: #{@user.email}
+%br
+%h4 Team: #{@user.team.name}
+%br
 .actions
   =link_to 'Edit', edit_user_path(@user), class: 'btn btn-success'
+  =link_to 'Change password', edit_user_registration_path
+  |
   =link_to 'Scoreboard', boards_path
