--- a/app/views/cells/edit.html.haml
+++ b/app/views/cells/edit.html.haml
@@ -11,11 +11,12 @@
     = f.label 'Please share your learning from this activity:'
     = f.text_area :response, rows: 10, value: @cell.response, class: 'form-control'
   .field
-    = image_tag @cell.picture.url(:thumb)
+    - if @cell.picture.present?
+      .img-fluid= image_tag @cell.picture.url(:thumb)
     = f.label 'Want to upload a picture?'
     = f.file_field :picture
   .field
+    = f.submit 'Update', class: 'btn btn-success'
+    = link_to "Cancel", board_cell_path(@cell.board, @cell)
     .pull-right
       = link_to "Delete", board_cell_path(@cell.board, @cell), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
-    = f.submit 'Submit', class: 'btn btn-success'
-    = link_to "Cancel", board_cell_path(@cell.board, @cell)
