--- a/app/views/cells/show.html.haml
+++ b/app/views/cells/show.html.haml
@@ -1,23 +1,32 @@
 .row
   .col-md-12
-    %h2= Board::LAYOUT[@cell.row][@cell.col][:name]
-    %p
-      %em.muted= Board::LAYOUT[@cell.row][@cell.col][:description]
+    .text-center.text-info
+      %h2
+        = Board::LAYOUT[@cell.row][@cell.col][:name]
+      .lead
+        %em= Board::LAYOUT[@cell.row][@cell.col][:description]
+  .col-md-12
+    .pull-right
+      =link_to 'Game board', board_path(@cell.board)
+      |
+      =link_to 'Scoreboard', boards_path
   .col-md-12
     %h2 Sharing about the activity:
-    .card
-      .card-body
-        %p
-          - if @cell.response
-            %strong= @cell.response
-          - else
-            %strong Please share some thoughts.
-    - if @cell.picture.present?
-      = image_tag @cell.picture.url(:thumb)
+    .row
+      .col-md-8
+        .card{style:'min-height: 200px'}
+          .card-body
+            - if @cell.response
+              %strong= @cell.response
+            - else
+              %strong Please share some thoughts.
+
+      .col-md-4
+        - if @cell.picture.present?
+          .img-fluid.pull-right= image_tag @cell.picture.url(:medium)
     %p
   .col-md-12
     - if current_user == @cell.board.user
       =link_to 'Edit', edit_board_cell_path(@cell.board, @cell), class: 'btn btn-warning'
-    =link_to 'Back to the board', board_path(@cell.board)
-    |
-    =link_to 'Scoreboard', boards_path
+      .pull-right
+        = link_to "Delete", board_cell_path(@cell.board, @cell), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
