--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -23,7 +23,8 @@
             .dropdown-menu{'aria-labelledby' => 'dropdownMenuButton'}
               - if user_signed_in?
                 .dropdown-item=link_to 'Scoreboard', boards_path
-                .dropdown-item=link_to 'My game board', board_path(current_user.board)
+                - if current_user.board
+                  .dropdown-item=link_to 'My game board', board_path(current_user.board)
                 .dropdown-item=link_to 'My profile', user_path(current_user)
                 .dropdown-item=link_to 'Sign out', destroy_user_session_path
               - else
