--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -12,8 +12,13 @@
   .field
     = f.label :team
     %br/
-    = f.select :team_id, options_for_select(Team.pluck(:name, :id), @user.team.id),
-      { include_blank: 'Select a team...' }, class: 'form-control'
+    = f.select :team_id, options_for_select(Team.pluck(:name, :id).push(['Add new...', 'new']), @user.team.id), { include_blank: 'Select a team...' }, class: 'form-control'
+  .field
+    .row.justify-content-end#new_team_form{style: 'display: none;'}
+      .col-md-11
+        = f.fields_for :team do |t|
+          = t.label :name
+          = t.text_field :name, class: 'form-control'
   .actions
     = f.submit "Update", class: 'btn btn-primary'
     = link_to "Cancel", user_path(@user)
@@ -21,3 +26,8 @@
 %h3 Cancel my account
 %p
   =button_to "Cancel my account", registration_path(@user), data: { confirm: "Are you sure?" }, method: :delete, class:'btn btn-danger'
+
+:javascript
+  $('select#user_team_id').change(function() {
+    (this.value == 'new') ? $('#new_team_form').show() : $('#new_team_form').hide();
+  });
