--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -18,7 +18,7 @@
       .col-md-11
         = f.fields_for :team do |t|
           = t.label :name
-          = t.text_field :name, class: 'form-control'
+          = t.text_field :name, value: nil, class: 'form-control'
   .actions
     = f.submit "Update", class: 'btn btn-primary'
     = link_to "Cancel", user_path(@user)
