--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -9,11 +9,10 @@
       .carousel-item.active
         =image_tag "TFG-WEB.jpg", class: 'd-block img-fluid', alt: 'Responsive image'
         .carousel-caption.d-none.d-md-block
-          %h3 Last "The Friday Gathering"!
-          %p Wrapping up the year with our last TFG and Friday night Bible Study. Don't miss it!
+          %h3 The Friday Gathering - Summer Edition!
+          %p Summer is a time of relationship for building, so we will meet at homes in Alameda for Bible studies.
           %h6
-            Grad Haven (1612 Walnut St Apt 1, Berkeley, CA 94709)
-            @ 6:30 PM, Friday, 5/4/2018
+            Alameda @ 6:30 PM, Friday | Rides @ 6 PM at Barrows Hall
           %p Please contact Virginia (virginia.chae at gpmail.org) for rides
       .carousel-item
         =image_tag "SWS-generic.jpg", class: 'd-block img-fluid', alt: 'Responsive image'
@@ -21,8 +20,8 @@
           %p We gather to worship God through songs, prayers, and listening to sermons every Sunday. Everyone is welcome!
           %h6
             = link_to 'Harbor Bay Parkway', 'https://www.google.com/maps/place/Gracepoint+Berkeley+Church/@37.7259911,-122.23579,17z/data=!3m1!4b1!4m5!3m4!1s0x808f846a9fc9b947:0xb503fe545d3946b6!8m2!3d37.7279048!4d-122.2338217'
-            @ 1:00 PM, Sunday, 4/1/2018
-          %p Rides at Barrows Hall at 12:00 PM
+            @ 9:00 AM, Sunday, 5/13/2018
+          %p Rides at Barrows Hall at 8:15 AM
       .carousel-item
         =image_tag "iusm-big-group.jpg", class: 'd-block img-fluid', alt: 'Responsive image'
         .carousel-caption.d-none.d-md-block
