Styled the home text

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -10,7 +10,7 @@
         =image_tag "TFG-WEB.jpg", class: 'd-block img-fluid', alt: 'Responsive image'
         .carousel-caption.d-none.d-md-block
           %h3 The Friday Gathering - Summer Edition!
-          %p Summer is a time of relationship for building, so we will meet at homes in Alameda for Bible studies.
+          %p Summer is a time for relationship building, so we will meet at homes in Alameda for Bible studies on Fridays.
           %h6
             Alameda @ 6:30 PM, Friday | Rides @ 6 PM at Barrows Hall
           %p Please contact Virginia (virginia.chae at gpmail.org) for rides
@@ -34,4 +34,4 @@
   .container
     %h2.text-center What is IUSM?
     =image_tag 'https://photos.smugmug.com/2018/2018-03-24-IUSM-Cataract-Falls/i-DqR2Rdz/0/71adcbbb/X2/EXPORT-7142-X2.jpg', class: 'img-fluid', id: 'student-img', alt: 'Responsive image'
-    %p IUSM is an official Christian student group at UC Berkeley. We are an undergraduate student group. The students in our group come from many countries across the world, including the United States. Our mission is to “love locally, impact globally", in which we seek to create a "home away from home" for students at Berkeley. We offer weekly Bible studies, and special talks and lectures on topics such as science vs. faith. We also offer English class, small group gatherings, fun trips around the Bay Area, sports, among other things. If you want to know more about us, contact us here, or come to our upcoming events!
+    .lead{style:'margin: 20px'} IUSM is an official Christian student group at UC Berkeley. We are an undergraduate student group. The students in our group come from many countries across the world, including the United States. Our mission is to “love locally, impact globally", in which we seek to create a "home away from home" for students at Berkeley. We offer weekly Bible studies, and special talks and lectures on topics such as science vs. faith. We also offer English class, small group gatherings, fun trips around the Bay Area, sports, among other things. If you want to know more about us, contact us here, or come to our upcoming events!
