--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,10 @@ header.masthead {
   padding-top: 120px;
 }
 
+header.masthead h2 {
+  margin: 0px 0px 20px 0;
+}
+
 section#about {
   padding-top: 0px;
 }
