--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -4,8 +4,10 @@
       .col-md-9
         %h2 #{@user_possessive} board
       .col-md-3.text-right
-        %h2= button_tag 'Instructions', class: 'btn btn-warning',
-          data: { toggle: 'modal', target: '#boardInstrModal' }
+        - unless @board == current_user.board
+          = link_to 'My board', board_path(current_user.board)
+          |
+        = link_to 'Scoreboard', boards_path
     .row
       .col-md-6
         %h4
@@ -40,9 +42,12 @@
                 =link_to board_cells_path(@board, {row: index_row, col: index_col}) do
                   .small All responses
   .col-md-3
+    %h2.text-center
+      = button_tag 'Game Instructions', class: 'btn btn-warning',
+      data: { toggle: 'modal', target: '#boardInstrModal' }
     / = render partial: 'bonus'
     = render partial: 'sharing'
-    
+
 #boardInstrModal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "exampleModalLabel", role: "dialog", tabindex: "-1"}
   .modal-dialog.modal-lg{role: "document"}
     .modal-content
