Added commontator so that people can post comments to game board cell

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  *= require bootstrap/dist/css/bootstrap.min.css
  *= require magnific-popup/dist/magnific-popup.css
  *= require startbootstrap-freelancer/scss/freelancer.scss
+ *= require commontator/application
  *= require_tree .
  *= require_self
  */
