--- a/app/views/cells/show.html.haml
+++ b/app/views/cells/show.html.haml
@@ -1,32 +1,30 @@
 .row
   .col-md-12
+    .pull-right
+      =link_to 'Game board', board_path(@cell.board)
+      |
+      =link_to 'Scoreboard', boards_path
+.row
+  .col-md-12
     .text-center.text-info
       %h2
         = Board::CELLS[@cell.row][@cell.col][:name]
       .lead
         %em= Board::CELLS[@cell.row][@cell.col][:description]
+.row
+  .col-md-12
+.row
   .col-md-12
     .pull-right
-      =link_to 'Game board', board_path(@cell.board)
-      |
-      =link_to 'Scoreboard', boards_path
-  .col-md-12
+      - if current_user == @cell.board.user
+        = link_to 'Edit', edit_board_cell_path(@cell.board, @cell), class: 'btn btn-sm btn-warning'
+        = link_to "Delete", board_cell_path(@cell.board, @cell), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger'
     %h2 Sharing about the activity:
-    .row
-      .col-md-8
-        .card{style:'min-height: 200px'}
-          .card-body
-            - if @cell.response
-              %strong= @cell.response
-            - else
-              %strong Please share some thoughts.
-
-      .col-md-4
+    .card{style:'min-height: 200px'}
+      .card-body
         - if @cell.picture.present?
-          .img-fluid.img-thumbnail.pull-right= image_tag @cell.picture.url(:medium)
-    %p
+          .img-fluid= image_tag @cell.picture.url(:medium), align: 'right'
+        = @cell.response
+.row.my-4
   .col-md-12
-    - if current_user == @cell.board.user
-      =link_to 'Edit', edit_board_cell_path(@cell.board, @cell), class: 'btn btn-warning'
-      .pull-right
-        = link_to "Delete", board_cell_path(@cell.board, @cell), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
+    = commontator_thread(@cell)
