Added margin bottom

--- a/app/views/cells/_header.html.haml
+++ b/app/views/cells/_header.html.haml
@@ -6,7 +6,7 @@
       =link_to 'Scoreboard', boards_path
 .row
   .col-md-12
-    .text-center.text-info
+    .mb-3.text-center.text-info
       %h2
         = Board::CELLS[cell.row][cell.col][:name]
       .lead
