Html_safe the links in description.

--- a/app/views/cells/_header.html.haml
+++ b/app/views/cells/_header.html.haml
@@ -10,4 +10,4 @@
       %h2
         = Board::CELLS[cell.row][cell.col][:name]
       .lead
-        %em= Board::CELLS[cell.row][cell.col][:description]
+        %em= Board::CELLS[cell.row][cell.col][:description].html_safe
