--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -22,7 +22,7 @@
               'aria-haspopup' => 'true', 'aria-expanded' => 'false'
             .dropdown-menu{'aria-labelledby' => 'dropdownMenuButton'}
               - if user_signed_in?
-                .dropdown-item=link_to 'Scoreboard', boards_path
+                .dropdown-item=link_to 'Summer Challenge', boards_path
                 - if current_user.board
                   .dropdown-item=link_to 'My game board', board_path(current_user.board)
                 .dropdown-item=link_to 'My profile', user_path(current_user)
