--- a/app/views/cells/edit.html.haml
+++ b/app/views/cells/edit.html.haml
@@ -1,14 +1,13 @@
-%h2
-  Edit Response
+= render partial: 'header',
+         locals: { board: @cell.board, row: @cell.row, col: @cell.col }
 - if @cell.errors.any?
   - @cell.errors.full_messages.each do |message|
     %p.text-danger
       = fa_icon('exclamation-triangle')
       = message
-
 = form_for(@cell, url: board_cell_path(@cell.board, @cell), html: { method: :put, multipart: true }) do |f|
   .field
-    = f.label 'Please share your learning from this activity:'
+    = f.label 'Edit your sharing for this activity:'
     = f.text_area :response, rows: 10, value: @cell.response, class: 'form-control'
   .field
     - if @cell.picture.present?
