--- a/app/views/cells/index.html.haml
+++ b/app/views/cells/index.html.haml
@@ -1,29 +1,24 @@
+= render partial: 'header',
+         locals: { board: current_user.board, row: @row, col: @col }
 .row
   .col-md-12
-    .pull-right
-      =link_to 'Your board', board_path(current_user.board)
-      |
-      =link_to 'Scoreboard', boards_path
-.row
-  .col-md-12
-    .text-center.text-info
-      %h2 Reponses to "#{Board::CELLS[@row][@col][:name]}"
     - if @cells.empty?
       .lead
         No one has done this yet. You can be the first one!
         =fa_icon 'smile-o'
     - @cells.each do |cell|
+      .mb-2
+        %strong
+          = link_to cell.board.user.username, board_path(cell.board)
+        .pull-right.small.text-muted
+          - if cell.finished_at
+            = cell.finished_at.strftime("%m/%d/%Y %H:%M%P")
+          - if cell.board.user == current_user
+            |
+            = link_to 'Edit', edit_board_cell_path(cell.board, cell)
+      .clearfix
       .card{style:'min-height: 100px'}
         .card-body
-          .mb-2
-            %em
-              From
-              = link_to cell.board.user.username, board_path(cell.board)
-              on
-              - if cell.finished_at
-                = cell.finished_at.strftime("%m/%d/%Y %H:%M%P")
-              - if cell.board.user == current_user
-                (#{link_to 'Edit', edit_board_cell_path(cell.board, cell)})
           - if cell.picture.present?
             .img-fluid= image_tag cell.picture.url(:medium), align: 'right'
           = simple_format cell.response
