--- a/app/views/cells/new.html.haml
+++ b/app/views/cells/new.html.haml
@@ -1,4 +1,5 @@
-= render partial: 'header', locals: { cell: @cell }
+= render partial: 'header',
+         locals: { board: @cell.board, row: @cell.row, col: @cell.col }
 .row
   .col-md-12
     = form_for @cell, url: { action: 'create' }, html: { multipart: true } do |f|
